src/main/java/com/example/YICcapstone/global/error/exception/EntityNotFoundException.java
package com.example.YICcapstone.global.error.exception;

public class EntityNotFoundException extends BusinessException {

    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}
